apps/k8s-api-proxy/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: internal-whitelist
  namespace: default
spec:
  ipAllowList:
    sourceRange:
      - 127.0.0.1/32
      - 192.168.0.0/16
      - 100.64.0.0/10
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: k8s-api-proxy
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`k8s-api.home.io`)
      services:
        - name: k8s-api
          port: 6443
  tls:
    passthrough: true
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-api
  namespace: default
spec:
  ports:
    - name: https
      port: 6443
      targetPort: 6443
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: k8s-api
  namespace: default
subsets:
  - addresses:
      - ip: 100.96.128.9
    ports:
      - name: https
        port: 6443
        protocol: TCP
